<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="10dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activation_main_heading"
        android:id="@+id/textViewHeading"/>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tracking_service_active_title"
        android:id="@+id/switch_tracking_active"/>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sync_service_active_title"
        android:id="@+id/switch_sync_active"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text=""
        android:id="@+id/buildInfo"
        android:autoLink="web"
        android:gravity="bottom"/>
</LinearLayout>
